hphp/hack/test/typecheck/enum/bad/trivial_compare_int_arraykey_enum_to_bool_bad.php.exp
WARN: File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 8, characters 10-20:
Invalid comparison: This expression will always return `false`.
A value of type `A` can never be equal to a value of type `bool` (Warn[12007])
WARN: File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 12, characters 10-20:
Invalid comparison: This expression will always return `false`.
A value of type `bool` can never be equal to a value of type `A` (Warn[12007])
WARN: File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 16, characters 10-20:
Invalid comparison: This expression will always return `true`.
A value of type `A` can never be equal to a value of type `bool` (Warn[12007])
WARN: File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 20, characters 10-20:
Invalid comparison: This expression will always return `true`.
A value of type `bool` can never be equal to a value of type `A` (Warn[12007])
ERROR: File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 8, characters 10-20:
This expression is always `false` (Typing[4118])
  File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 3, characters 6-6:
  This is an array key (int | string) arising from an implicit `as arraykey` constraint on this type
  File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 7, characters 13-16:
  This is a bool
ERROR: File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 12, characters 10-20:
This expression is always `false` (Typing[4118])
  File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 11, characters 13-16:
  This is a bool
  File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 3, characters 6-6:
  This is an array key (int | string) arising from an implicit `as arraykey` constraint on this type
ERROR: File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 16, characters 10-20:
This expression is always `true` (Typing[4118])
  File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 3, characters 6-6:
  This is an array key (int | string) arising from an implicit `as arraykey` constraint on this type
  File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 15, characters 13-16:
  This is a bool
ERROR: File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 20, characters 10-20:
This expression is always `true` (Typing[4118])
  File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 19, characters 13-16:
  This is a bool
  File "trivial_compare_int_arraykey_enum_to_bool_bad.php", line 3, characters 6-6:
  This is an array key (int | string) arising from an implicit `as arraykey` constraint on this type
